fixed css letter-spacing

--- a/html/style.css
+++ b/html/style.css
@@ -5,6 +5,7 @@ html
 	background-color: #e37000;
 	background-image: url("img/bg_orange_red_gradient.png");
 	background-repeat: repeat-x;
+	letter-spacing: 0.1em;
 }
 
 a, a:visited
